--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <br>
             <br>
             <h6 class="sub_t">Temperature</h6>
-            <img src="temp_pit.png" alt="temp">
+            <img src="temp_pit.PNG" alt="temp">
             <h6 class="sub_t">Climate</h6>
             <img src="clima_pit.PNG" alt="temp">
         </div>
@@ -97,7 +97,7 @@
             <br>
             <br>
             <h6 class="sub_t">Temperature</h6>
-            <img src="temp_mon.png" alt="temp">
+            <img src="temp_mon.PNG" alt="temp">
             <h6 class="sub_t">Climate</h6>
             <img src="clima_mon.PNG" alt="temp">
         </div>
@@ -117,7 +117,7 @@
             <br>
             <br>
             <h6 class="sub_t">Temperature</h6>
-            <img src="temp_mon.png" alt="temp">
+            <img src="temp_mon.PNG" alt="temp">
             <h6 class="sub_t">Climate</h6>
             <img src="clima_mon.PNG" alt="temp">
         </div>
