--- a/sobre.html
+++ b/sobre.html
@@ -116,7 +116,7 @@
                     <p>Despite the controversy and debate surrounding the veracity of the events, the Amityville case remains one of the most iconic and discussed cases in the realm of the paranormal, influencing popular culture and inspiring many other horror narratives over the years.</p>
                 </li>
             </div>
-        <button class="button"onclick="showHiddenContent()">Ver Mais</button>
+        <button class="button"onclick="showHiddenContent()">View More</button>
         </ul>
         Origem: Wikipédia, a enciclopédia livre.
     </div>
