--- a/sobre.html
+++ b/sobre.html
@@ -37,7 +37,7 @@
                         <li><a href="destinos.html#witch"><b>Witch Bathsheba Sherman</b></a></li>
                     </ul>
                 </li>
-                <li><a href="playlist.html"><b>Playlist</b></a></li>
+                <li><a href=".html"><b>Playlist</b></a></li>
             </div>
         </ul>
     </nav>
